<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/enterName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="67dp"
        android:layout_height="34dp"
        android:text="@string/name"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtName"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="65dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="612dp"
        android:text="@string/gender"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <RadioGroup
        android:id="@+id/rGrp"
        android:layout_width="104dp"
        android:layout_height="66dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/txtName"
        app:layout_constraintVertical_bias="0.026">

        <RadioButton
            android:id="@+id/rBtnMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/rBtnFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="56dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/age"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.003" />

    <EditText
        android:id="@+id/txtAge"
        android:layout_width="190dp"
        android:layout_height="34dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/rGrp"
        app:layout_constraintVertical_bias="0.051" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="67dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/hobby"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.013" />

    <CheckBox
        android:id="@+id/cbSport"
        android:layout_width="81dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/sport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/txtAge" />

    <CheckBox
        android:id="@+id/cbMovie"
        android:layout_width="86dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:text="@string/movie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbSport" />

    <CheckBox
        android:id="@+id/cbReading"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_marginBottom="356dp"
        android:text="@string/reading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbMovie" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_header_reply"
        android:layout_width="122dp"
        android:layout_height="37dp"
        android:text="@string/receive"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.757" />

    <TextView
        android:id="@+id/text_message_body"
        android:layout_width="113dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/text_header_reply"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.755" />

</androidx.constraintlayout.widget.ConstraintLayout>